examples/bad/divide-by-zero.elina
fn main(): void {
  var x: int = 0 / 0;
}